apps/monitoring/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard-https
  namespace: monitoring
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: grafana-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.saldivar.io`)
      kind: Rule
      services:
        - name: grafana
          port: service
      middlewares:
        - name: security
          namespace: kube-system
